--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
-    <string name="app_name">VolleyRecycleView</string>
-    <string name="action_settings">Settings</string>
+    <string name="app_name">iTunes Songs Preview</string>
+    <string name="action_settings">About</string>
+    <string name="details">See More</string>
+    <string name="search_label">Please type Gender or Artist</string>
 </resources>
